WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289849
webkitgtk-2.48.0 fails to build with GST_DISABLE_GST_DEBUG
https://bugs.webkit.org/show_bug.cgi?id=289849
Summary
webkitgtk-2.48.0 fails to build with GST_DISABLE_GST_DEBUG
Xi Ruoyao
Reported
2025-03-15 04:24:24 PDT
AppendPipeline::streamTypeToStringLower is excluded with GST_DISABLE_GST_DEBUG, but it's actually used by AppendPipeline::Track::emplaceOptionalParserForFormat even though `GST_DISABLE_GST_DEBUG`. In PlatformRawAudioData::copyTo, sourceOffset is not defined if GST_DISABLE_GST_DEBUG, but then it's used for auto source = audioData.planesOfSamples(...) even though GST_DISABLE_GST_DEBUG.
Attachments
Add attachment
proposed patch, testcase, etc.
Xi Ruoyao
Comment 1
2025-03-15 04:50:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42531
EWS
Comment 2
2025-03-15 06:07:13 PDT
Committed
292218@main
(2b5f8c207511): <
https://commits.webkit.org/292218@main
> Reviewed commits have been landed. Closing PR #42531 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-03-15 06:08:17 PDT
<
rdar://problem/147118524
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug