webkitgtk-2.48.0 fails to build with GST_DISABLE_GST_DEBUG https://bugs.webkit.org/show_bug.cgi?id=289849

Reviewed by Philippe Normand.

Move definitions needed even though GST_DISABLE_GST_DEBUG out of #ifndef
GST_DISABLE_GST_DEBUG.

* Source/WebCore/platform/audio/gstreamer/PlatformRawAudioDataGStreamer.cpp:
(WebCore::PlatformRawAudioData::copyTo):
* Source/WebCore/platform/graphics/gstreamer/mse/AppendPipeline.cpp:
(WebCore::AppendPipeline::streamTypeToStringLower):
* Source/WebCore/platform/graphics/gstreamer/mse/AppendPipeline.h:
(WebCore::AppendPipeline::streamTypeToStringLower):

Canonical link: https://commits.webkit.org/292218@main